samples/_failures_safe/1761270003_e21cfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dfd7db6.c: In function ‘main’:
./samples/SAFE/__tmp_4dfd7db6.c:186:9: error: expected expression at end of input
  186 |         } else
      |         ^
./samples/SAFE/__tmp_4dfd7db6.c:186:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4dfd7db6.c:186:9: error: expected declaration or statement at end of input
